# inputvalidate

./: .gitignore  LICENSE  README.md  inputvalidation.py  main.py  pyproject.toml  setup.cfg  setup.py  test.py  testagain.py
inputvalidate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: inputvalidate.py
src/inputvalidate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: notes.txt  test.py
